--- a/style/mixin/flex.scss
+++ b/style/mixin/flex.scss
@@ -1,6 +1,7 @@
-@mixin flex($align-items: flex-start, $display: flex, $flex-direction: row, $justify-content: flex-start) {
+@mixin flex($align-items: flex-start, $display: flex, $flex-direction: row, $justify-content: flex-start, $flex-wrap: nowrap) {
 	align-items: $align-items;
 	display: $display;
 	flex-direction: $flex-direction;
+	flex-wrap: $flex-wrap;
 	justify-content: $justify-content;
 }
