--- a/style/header-container/header-contrainer.scss
+++ b/style/header-container/header-contrainer.scss
@@ -2,6 +2,7 @@
 	background-color: $main-background-color;
 	position: fixed;
 	width: 100%;
+	z-index: 1;
 
 	.header-content {
 		@include flex($align-items: center, $justify-content: space-between);
